Remove JAVA_HEAP_MAX and add "-XX:+UseG1GC -XX:+UseStringDeduplication -XX:NewRatio=3" to INGRID_OPTS.
add ignore.